HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeReadMode/Source/Main.uv
//! Rejected key-system specimen for speculative execution without write mode.

public procedure speculativeReadModeReference() -> i32 {
    var shared_value: shared i32 = 1
    var observed: i32 = 0
    #shared_value speculative read {
        observed = shared_value
    }
    return observed
}
